# susy_cross_section

./: .gitignore  .travis.yml  LICENSE  README.md  get.py  mypy.ini  names.json  pyproject.toml  setup.cfg
.github/actions/setup-poetry-with-cache/: action.yaml
.github/workflows/: type-check.yaml  unit-test.yaml
13TeV/: n2x1hino_x1m_n2_cteq66.json  n2x1hino_x1p_n2_cteq66.json  slsl_maxmix.json  slsl_rr.json  x1x1wino.json
contrib/: .gitignore  citations.tex  get_lhc_susy_xs_wg.sh  scraper.py
contrib/bps/: 40.2.4.slha  40.2.5.slha
contrib/raw/: 13TeVn1n2hino  13TeVn2x1hino_x1m_n2_cteq66  13TeVn2x1hino_x1m_n2_mstw2008  13TeVn2x1hino_x1p_n2_cteq66  13TeVn2x1hino_x1p_n2_mstw2008  13TeVn2x1hino_x1pm_n2  13TeVn2x1wino_x1m_n2  13TeVn2x1wino_x1p_n2  13TeVn2x1wino_x1pm_n2  13TeVslsl_ll  13TeVslsl_maxmix  13TeVslsl_rr  13TeVx1x1hino  13TeVx1x1wino
contrib/unused/: utility.py  utility_unused_py.bak
docs/: Makefile  api_reference.rst  conf.py  cross_section_references.bib  foot_matter.tex.in  generate_figures.sh  index.rst  introduction.rst  modules.rst  quick_start.rst  references.bib  requirements.txt  susy_cross_section.bib  susy_cross_section.rst  use_as_package.rst  use_as_script.rst  validations.rst
docs/_static/: custom.css
docs/_templates/: latex.tex_t
docs/_themes/: conf_bibtex.py  latex_finalizer.py  latex_preamble.txt  latex_writer.py  mysphinx.sty  sphinx_customize.py  utphys27mod.bst
susy_cross_section/: __init__.py  axes_wrapper.py  config.py  cross_section_table.py  interpolator.py  names.json  scripts.py  table.py  table_info.py  utility.py
susy_cross_section/13TeV/: n1n2hino.json  n2x1hino_x1m_n2.json  n2x1hino_x1m_n2_mstw2008.json  n2x1hino_x1p_n2.json  n2x1hino_x1p_n2_mstw2008.json  n2x1hino_x1pm_n2.json  n2x1wino_x1m_n2.json  n2x1wino_x1p_n2.json  n2x1wino_x1pm_n2.json  slsl_ll.json  x1x1hino.json
susy_cross_section/base/: __init__.py  info.py  table.py
susy_cross_section/data/lhc_susy_xs_wg/: 13TeVn1n2hino_deg_cteq.csv  13TeVn1n2hino_deg_cteq.info  13TeVn1n2hino_deg_envelope.csv  13TeVn1n2hino_deg_envelope.info  13TeVn1n2hino_deg_mstw.csv  13TeVn1n2hino_deg_mstw.info  13TeVn2x1hino_deg_cteq_m.csv  13TeVn2x1hino_deg_cteq_m.info  13TeVn2x1hino_deg_cteq_p.csv  13TeVn2x1hino_deg_cteq_p.info  13TeVn2x1hino_deg_cteq_pm.csv  13TeVn2x1hino_deg_cteq_pm.info  13TeVn2x1hino_deg_envelope_pm.csv  13TeVn2x1hino_deg_envelope_pm.info  13TeVn2x1hino_deg_mstw_m.csv  13TeVn2x1hino_deg_mstw_m.info  13TeVn2x1hino_deg_mstw_p.csv  13TeVn2x1hino_deg_mstw_p.info  13TeVn2x1hino_deg_mstw_pm.csv  13TeVn2x1hino_deg_mstw_pm.info  13TeVn2x1wino_cteq_m.csv  13TeVn2x1wino_cteq_m.info  13TeVn2x1wino_cteq_p.csv  13TeVn2x1wino_cteq_p.info  13TeVn2x1wino_cteq_pm.csv  13TeVn2x1wino_cteq_pm.info  13TeVn2x1wino_envelope_m.csv  13TeVn2x1wino_envelope_m.info  13TeVn2x1wino_envelope_p.csv  13TeVn2x1wino_envelope_p.info  13TeVn2x1wino_envelope_pm.csv  13TeVn2x1wino_envelope_pm.info  (+33 more)
susy_cross_section/interp/: __init__.py  axes_wrapper.py  interpolator.py
susy_cross_section/tests/: test_interpolator.py  test_scripts.py
validation/: README.md  __init__.py  __main__.py  base.py  onedim.py  sieve.py  validators.py
validation/contrib/: .gitignore  download.sh  generate.sh  patch.sh  run_nllfast.cfg.default  run_nllfast.py
validation/results/: .gitignore
(+50 files in other folders)
