[tool.poetry]
name = "susy_cross_section"
version = "0.0.1"
description = "A Python package for high-energy physics analysis to provide SUSY cross section data"
authors = ["Sho Iwamoto (Misho) <webmaster@misho-web.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/misho104/susy_cross_section"

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.0"
pandas = "^0.24"
scipy = "^1.2"

[tool.poetry.dev-dependencies]
nose = "^1.3"
coverage = "^4.5"
mypy = "^0.650"
flake8 = "^3.6"
flake8-builtins = "^1.4"
flake8-commas = "^2.0"
flake8-comprehensions = "^1.4"
flake8-docstrings = "^1.3"
flake8-isort = "^2.6"
flake8-logging-format = "^0.6"
flake8-rst-docstrings = ">0.0.7"
pep8-naming = "^0.7"
coveralls = "^1.5"

[tool.poetry.scripts]
susy-xs-get = "susy_cross_section.scripts:command_get"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
