[tool.poetry]
name = "susy_cross_section"
version = "0.1.0"
description = "A Python package for high-energy physics analysis to provide SUSY cross section data"
authors = ["Sho Iwamoto (Misho) <webmaster@misho-web.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/misho104/susy_cross_section"

[tool.poetry.dependencies]
python = "2.7.* || ^3.5"
click = "^7.0"
pandas = "^0.24"
scipy = "^1.2"
colorama = "^0.4"
coloredlogs = "^10.0"
pathlib = { version = "^1.0", python = "2.7.*"}
typing = { version = "^3.6", python = "2.7.*"}

[tool.poetry.dev-dependencies]
nose = "^1.3"
coverage = "^4.5"
coveralls = "^1.5"
mypy =                  {version = "^0.650", python = "^3.6"}
flake8 =                {version = "^3.7",   python = "^3.6"}
flake8-builtins =       {version = "^1.4",   python = "^3.6"}
flake8-commas =         {version = "^2.0",   python = "^3.6"}
flake8-comprehensions = {version = "^1.4",   python = "^3.6"}
flake8-docstrings =     {version = "^1.3",   python = "^3.6"}
flake8-isort =          {version = "^2.6",   python = "^3.6"}
flake8-logging-format = {version = "^0.6",   python = "3.6"}
pep8-naming =           {version = "^0.7",   python = "3.6"}

[tool.poetry.scripts]
susy-xs = "susy_cross_section.scripts:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
