[tool.poetry]
name = "susy_cross_section"
version = "0.2.3"
description = "A Python package for high-energy physics analysis to provide SUSY cross section data"
authors = ["Sho Iwamoto (Misho) <webmaster@misho-web.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/misho104/susy_cross_section"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.0"
pandas = "^1.2"
scipy = "^1.8"
numpy = "^1.21"
colorama = "^0.4"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
mypy = "^0.931"
flake8 = "^4.0"
flake8-builtins = "^1.5"
flake8-commas = "^2.1"
flake8-comprehensions = "^3.8"
flake8-docstrings = "^1.6"
flake8-isort = "^4.0"
flake8-logging-format = "^0.6"
pep8-naming = "^0.11"

[tool.poetry.scripts]
susy-xs = "susy_cross_section.scripts:main"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
